--- a/src/App.scss
+++ b/src/App.scss
@@ -130,7 +130,7 @@ div:hover{
       }
     }
     .kitty{
-      height: 150px;
+      width: 90%;
     }
     #divisores{
       z-index: 1;
@@ -389,7 +389,365 @@ div:hover{
   }
 }
 
-@media (max-width: 1024px){
+#backButton{
+  position: absolute;
+  top: 1vh;
+  left: 1vw;
+  z-index: 10;
+  div{
+    width: 100%;
+    background: linear-gradient(#2f91fa, #00c3ff);
+    border-radius: 50%;
+    border: #3172ff solid 3px;
+    img{
+      width: 5vw;
+      padding-right: 4px;
+    }
+  }
+  div:hover{
+    cursor: pointer;
+    background: linear-gradient(#3b9aff, #33cfff);
+  }
+}
+
+@media (min-width: 600px) and (max-width: 1024px){
+  #Landing{
+    h1{
+      font-size: 80px;
+      margin-bottom: 40px;
+    }
+    div{
+      width: auto;
+      .clock{
+        z-index: 10;
+        transition: 1s;
+        position: relative;
+      }
+      .pomoCat{
+        position: absolute;
+        margin: 50px 0px 0px -370px;
+        z-index: 0;
+        height: 40vh;
+        transition: 1s;
+        transform: rotate(0deg);
+      }
+    }
+    div:active{
+      .clock{
+        transform: scale(0.9);
+      }
+      .pomoCat{
+        transform: scale(1);
+        margin: -150px 0px 0px -370px;
+      }
+    }
+    div:hover{
+      .clock{
+        transform: scale(1.1);
+      }
+      .pomoCat{
+        transform: scale(1) rotate(0deg);
+        margin: -150px 0px 0px -370px;
+      }
+    }
+    
+  }
+
+  #Home{
+    .container-home, .result-home{
+      width: 40vw;
+      #divisores{
+        width: 80%;
+        .config-Timer-time{
+          #time{
+            height: 45px;
+            font-size: 20px;
+            width: auto;
+          }
+          #time-active{
+            height: 45px;
+            font-size: 20px;
+            width: auto;
+          }
+      }
+      .config-Timer-sessions{
+        #Background{
+          height: 45px;
+          font-size: 15px;
+          width: auto;
+        }
+        #Background-active{
+          height: 45px;
+          font-size: 15px;
+          width: auto;
+        }
+        #sessions{
+          height: 45px;
+          font-size: 15px;
+          width: auto;
+        }
+          #sessions-active{
+            height: 45px;
+            font-size: 15px;
+            width: auto;
+          }
+        };
+  
+      }
+      .images-back{
+        height: auto;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        .images-button{
+          display: flex;
+          flex-direction: column;
+          width: 165px;
+          margin-bottom: 20px;
+          #button-back{
+            background-color: $firstColor;
+          }
+          #button-back:hover{
+            background-color: #00c3ff;
+          }
+          #button-back-active{
+            background-color: #58a9ff;
+          }
+          #environment{
+            width: 140px;
+            margin: 5px;
+          }
+        }
+      }
+      .kitty{
+        height: 110px;
+      }
+    }
+
+    
+  }
+
+  #Timer{
+  @include flexibility(column, center, center);
+  gap: 30px;
+  .timer-status{
+    width: 90%;
+    h2{
+      font-size: 60px;
+    }
+  }
+  .time{
+    h1{
+      font-size: 230px;
+      -webkit-text-stroke: 5px $white;
+    }
+  }
+    .ProgressBar{
+    width: 75%;
+  }
+  
+  }
+  #backButton{
+    div{
+      border-radius: 50%;
+      border: #3172ff solid 3px;
+      img{
+        width: 7vw;
+        padding-right: 4px;
+      }
+    }
+  }
+}
+
+@media (max-width: 590px){
+  #Landing{
+    h1{
+      font-size: 80px;
+      margin-bottom: 40px;
+    }
+    div{
+      width: auto;
+      .clock{
+        z-index: 10;
+        height: 40vh;
+        transition: 1s;
+        position: relative;
+      }
+      .pomoCat{
+        position: absolute;
+        height: 35vh;
+        margin: 20px 0px 0px -310px;
+        z-index: 0;
+        transition: 1s;
+        transform: rotate(0deg);
+      }
+    }
+    div:active{
+      .clock{
+        transform: scale(0.9);
+      }
+      .pomoCat{
+        transform: scale(1);
+        margin: -150px 0px 0px -310px;
+      }
+    }
+    div:hover{
+      .clock{
+        transform: scale(0.9);
+      }
+      .pomoCat{
+        transform: scale(1) rotate(0deg);
+        margin: -150px 0px 0px -310px;
+      }
+    }
+    
+  }
+
+  #Home{
+    .container-home, .result-home{
+      width: 40vw;
+      #divisores{
+        width: 80%;
+        .config-Timer-time{
+          display: grid;
+          grid-template-columns: 40% 40%;
+          display: flex;
+          justify-content: space-around;
+          #time{
+            height: 45px;
+            font-size: 80%;
+            width: auto;
+          }
+          #time-active{
+            height: 45px;
+            font-size: 70%;
+            width: auto;
+          }
+      }
+      .config-Timer-sessions{
+        display: grid;
+        grid-template-columns: 40% 40%;
+        row-gap: 5px;
+        #Background{
+          height: 45px;
+          font-size: 55%;
+          display: flex;
+          align-self: start;
+          width: auto;
+        }
+        #Background-active{
+          height: 45px;
+          font-size: 11px;
+          width: auto;
+        }
+        #sessions{
+          height: 45px;
+          font-size: 55%;
+          
+        }
+          #sessions-active{
+            height: 45px;
+            font-size: 12px;
+            width: auto;
+          }
+        };
+  
+      }
+      .images-back{
+        height: auto;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        .images-button{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          width: 110%;
+          margin-bottom: 20px;
+          #button-back{
+            background-color: $firstColor;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+          }
+          #button-back:hover{
+            background-color: #00c3ff;
+          }
+          #button-back-active{
+            background-color: #58a9ff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+          }
+          #environment{
+            
+            width: 100%;
+          }
+        }
+      }
+      .kitty{
+        
+      }
+    }
+
+    
+  }
+
+  #Timer{
+  @include flexibility(column, center, end);
+  gap: 30px;
+  .time{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+
+    h1{
+      font-size: 700%;
+      -webkit-text-stroke: 5px $white;
+    }
+  }
+  .timer-status{
+    width: 90%;
+    h2{
+      font-size: 50px;
+    }
+    margin-bottom: 5vh;
+  }
+    .ProgressBar{
+    width: 80%;
+    margin-bottom: 8vh;
+  }
+  
+  }
+  #Footer{
+    div{
+      h2{
+        a{
+          font-size: 120%;
+        }
+      }
+    }
+    img{
+      width: 9vw;
+    }
+  }
+  #backButton{
+    div{
+      border-radius: 50%;
+      border: #3172ff solid 3px;
+      img{
+        width: 7vw;
+        padding-right: 4px;
+      }
+    }
+  }
+}
+
+@media (max-height: 500px){
   #Landing{
     h1{
       font-size: 80px;
@@ -467,7 +825,6 @@ div:hover{
       .images-back{
         height: auto;
         width: 80%;
-        border: solid 1px #000;
         display: flex;
         flex-direction: column;
         justify-content: space-around;
@@ -493,7 +850,7 @@ div:hover{
         }
       }
       .kitty{
-        height: 150px;
+        height: 110px;
       }
     }
 
@@ -520,4 +877,5 @@ div:hover{
   }
   
   }
-  }
+  
+}
