--- a/src/App.css
+++ b/src/App.css
@@ -698,8 +698,8 @@
 /* --------------------------- HORIZONTAL --------------------------- */
 @media (max-height: 450px) and (max-width: 1024px) {
   #Landing h1 {
-    font-size: 80px;
-    margin-bottom: 40px;
+    font-size: 70px;
+    margin-bottom: 30px;
   }
   #Landing div {
     width: auto;
@@ -708,11 +708,11 @@
     z-index: 10;
     transition: 1s;
     position: relative;
-    bottom: 30px;
+    bottom: 18vh;
   }
   #Landing div .pomoCat {
     position: absolute;
-    margin: 20px 0px 0px -190px;
+    margin: -60px 0px 0px -140px;
     z-index: 0;
     height: 40vh;
     transition: 1.5s;
@@ -723,14 +723,14 @@
   }
   #Landing div:active .pomoCat {
     transform: scale(1);
-    margin: -100px 0px 0px -185px;
+    margin: -115px 0px 0px -140px;
   }
   #Landing div:hover .clock {
     transform: scale(0.9);
   }
   #Landing div:hover .pomoCat {
     transform: scale(1) rotate(0deg);
-    margin: -100px 0px 0px -185px;
+    margin: -115px 0px 0px -140px;
   }
   #Home .container-home, #Home .result-home {
     width: 40vw;
